# ruso-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: CLI.md  README.md
src/: logging.rs  main.rs  util.rs
src/cli/: args.rs  banner.rs  cmd_registry.rs  credentials.rs  discover.rs  install_store.rs  mod.rs  registry.rs  report.rs  scheme.rs  style.rs  targets.rs  throttle.rs  ui.rs
