[package]
name = "ruso-cli"
version = "0.1.0-dev"
edition = "2024"
description = "CLI for the Ruso vulnerability scan DSL"
license = "Apache-2.0"

[[bin]]
name = "ruso"
path = "src/main.rs"

[dependencies]
ruso-runtime = { git = "https://github.com/Hopeless-Labs/ruso-runtime.git", branch = "main" }
ruso-script = { git = "https://github.com/Hopeless-Labs/ruso-script.git", branch = "main" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
thiserror = "2.0.12"
futures = { version = "0.3", default-features = false, features = ["std"] }

# Local dev override: if the sibling repos are checked out at ../ruso-runtime
# and ../ruso-script, cargo uses the local paths instead of fetching from git.
# External contributors who only clone this repo will see "patch not used"
# warnings and fall back to the git dependencies above.
[patch."https://github.com/Hopeless-Labs/ruso-runtime.git"]
ruso-runtime = { path = "../ruso-runtime" }

[patch."https://github.com/Hopeless-Labs/ruso-script.git"]
ruso-script = { path = "../ruso-script" }
