[package]
name = "ruso-cli"
version = "0.1.0-beta.4"
edition = "2024"
description = "CLI for the Ruso Scripting Language (RSL) vulnerability scanner"
license = "Apache-2.0"

[[bin]]
name = "ruso"
path = "src/main.rs"

[dependencies]
ruso-runtime = { git = "https://github.com/Hopeless-Labs/ruso-runtime.git", branch = "main" }
ruso-script = { git = "https://github.com/Hopeless-Labs/ruso-script.git", branch = "main" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
thiserror = "2.0.12"
futures = { version = "0.3", default-features = false, features = ["std"] }

# Registry client (login/publish/install/search). reqwest with rustls so we
# don't drag in openssl; multipart for `publish`, json for everything else.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
semver = "1"
dirs = "5"

# Local dev override lives in .cargo/config.toml (`paths` array), not here.
# Putting `[patch]` in Cargo.toml breaks `cargo install --git` for external
# users because cargo resolves `../ruso-runtime` relative to its temp checkout
# dir. The `paths` override in .cargo/config.toml is silently ignored when the
# sibling directories don't exist, so it's safe to commit.
